--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "proj",
   "private": true,
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.12.10",
     "@popperjs/core": "^2.10.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
