--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "proj",
   "private": true,
   "dependencies": {
+    "@babel/preset-react": "^7.16.0",
     "@googlemaps/js-api-loader": "^1.12.10",
     "@googlemaps/markerclustererplus": "^1.2.9",
     "@popperjs/core": "^2.10.2",
@@ -9,16 +10,23 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react_ujs": "^2.6.1",
     "stimulus": "^3.0.1",
     "stimulus_reflex": "3.4.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "three": "^0.133.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3"
+    "webpack-dev-server": "^3",
+    "vite": "^2.6.0"
   }
 }
