--- a/package.json
+++ b/package.json
@@ -16,17 +16,19 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native-cli": "^2.0.1",
+    "react-native-web": "^0.17.5",
     "react_ujs": "^2.6.1",
     "stimulus": "^3.0.1",
     "stimulus_reflex": "3.4.1",
+    "three": "^0.133.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "three": "^0.133.0"
+    "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3",
-    "vite": "^2.6.0"
+    "vite": "^2.6.0",
+    "webpack-dev-server": "^3"
   }
 }
